--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/styles/index.scss" />
-    <title>Leet Hub</title>
+    <title>Cozy Space</title>
   </head>
   <body>
     <div id="root"></div>
